<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.games647</groupId>
    <!--This have to be in lowercase because it's used by plugin.yml-->
    <artifactId>fastlogin</artifactId>
    <packaging>pom</packaging>

    <name>FastLogin</name>
    <version>1.11</version>

    <url>https://www.spigotmc.org/resources/fastlogin.14153/</url>
    <description>
        Automatically logins premium (paid accounts) player on a offline mode server
    </description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Set default for non-git clones -->
        <git.commit.id>Unknown</git.commit.id>

        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>

    <modules>
        <module>core</module>
        <module>bukkit</module>
        <module>bungee</module>
        <module>universal</module>
    </modules>

    <build>
        <defaultGoal>install</defaultGoal>
        <!--Just use the project name to replace an old version of the plugin if the user does only copy-paste-->
        <finalName>${project.name}</finalName>

        <plugins>
            <plugin>
                <groupId>pl.project13.maven</groupId>
                <artifactId>git-commit-id-plugin</artifactId>
                <version>2.2.4</version>
                <configuration>
                    <failOnNoGitDirectory>false</failOnNoGitDirectory>
                </configuration>
                <executions>
                    <execution>
                        <id>get-the-git-infos</id>
                        <goals>
                            <goal>revision</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <!--Replace variables-->
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>
</project>
